--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 asgiref==3.2.7
+certifi==2020.6.20
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.6
 django-rest-framework==0.1.0
 djangorestframework==3.11.0
 gunicorn==20.0.4
+idna==2.10
 Pillow==7.1.2
 psycopg2==2.8.5
 python-http-client==3.2.7
 pytz==2020.1
+requests==2.24.0
 sendgrid==6.4.1
 sqlparse==0.3.1
 starkbank-ecdsa==1.0.0
+urllib3==1.25.9
 whitenoise==5.1.0
